
    Removed references to the de facto standard predicates retractall/1,
    compare/3, and callable/1 from all the config files of Prolog compilers
    where these predicates are built-in.

    Added declaration of file name extensions for intermediate files generated
    by the Prolog compilers themselves to the config files of B-Prolog, Ciao,
    Qu-Prolog, and XSB.

    Updated the Qu-Prolog config file with support for accessing environment
    variables and updated definitions of file-system access predicates that
    avoid issues with file paths containing spaces. Logtalk now requires
    Qu-Prolog 8.12 or a later version.

    Updated the GNU Prolog config file in order to support the built_in_fd/0,
    built_in_fd/1, built_in/0, built_in/1, and ensure_linked/1 proprietary
    directives.

    Workaround a B-Prolog 7.4 bug where the built-in predicate callable/1 is
    missing the property "built_in". Declared the predicates and/3, equiv/3,
    and or/3 as built-in predicates. Added support for table/1 directives
    whose argument is predicate template with the cardinality limit omitted.

    Updated the Qu-Prolog integration files in order to avoid a segmentation
    fault when using a 32 bits compilation of Qu-Prolog. Thanks to Peter
    Robinson for his help in solving this problem.

    Added a YAP integration file, "yaphooks.pl", defining the hook predicate
    user:prolog_predicate_name/2.

    Commented out the setting of the proprietary Prolog flag "iso" to "true"
    in the SWI-Prolog config file due to all the module libraries that fail
    to compile/work in "iso" mode.

    Renamed the SWI-Prolog integration files, "swihook.pl" and "xpcehook.pl"
    to, respectively, "swihooks.pl" and "xpcehooks.pl".

    Added a definition for the hook predicate user:prolog_predicate_name/2 to
    the SWI-Prolog hook file, "swihooks.pl". This hook predicate allows a more
    user-friendly experience when using the SWI-Prolog profiler with Logtalk.